<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="423dp"
        android:layout_height="157dp"
        android:contentDescription="@string/logo_for_the_carlsberg_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carlsberg_logo" />

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:text="@string/brews"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_logo" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="toHomePage"
        android:text="@string/home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="toContactPage"
        android:text="@string/contact_page"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/contactButtonDescription"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/press_the_button_to_view_our_contact_information"
        app:layout_constraintBottom_toTopOf="@+id/contactButtonDescription"
        app:layout_constraintEnd_toStartOf="@+id/contactButton" />

    <TextView
        android:id="@+id/contactButtonDescription"
        android:layout_width="135dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/press_the_burron_to_view_our_home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton" />

    <ScrollView
        android:layout_width="390dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageClassic"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/image_and_info_about_the_classic_brew"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageUnfiltered"
                app:srcCompat="@drawable/classic" />

            <ImageView
                android:id="@+id/image1883"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/image_and_info_about_the_1883_brew"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/_1883" />

            <ImageView
                android:id="@+id/imageElephant"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/image_and_info_about_the_elephant_brew"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageAlcoholFree"
                app:srcCompat="@drawable/elephant" />

            <ImageView
                android:id="@+id/imageUnfiltered"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/image_and_info_about_the_unfiltered_brew"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image1883"
                app:srcCompat="@drawable/unfiltered" />

            <ImageView
                android:id="@+id/imageAlcoholFree"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_and_info_about_the_alcohol_free_brew"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSortGuld"
                app:srcCompat="@drawable/alcohol_free" />

            <ImageView
                android:id="@+id/imageSortGuld"
                android:layout_width="175dp"
                android:layout_height="210dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/image_and_info_about_the_sort_guld_brew"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sort_guld" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>